--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ini": "^1.3.30",
     "@types/node": "^16.10.3",
     "eslint": "^7.32.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "ini": "^2.0.0"
   }
 }
