--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es2017",
-      "strict": true,
-      "rootDir": ".",
-      "typeRoots": [
-        "./types"
-      ],
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "noEmit": true,
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true
-    },
-    "exclude": [
-      "./node_modules"
-    ]
-  }
-  
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2017",
+    "strict": true,
+    "rootDir": ".",
+    "typeRoots": [
+      "./types",
+      "node_modules/@types"
+    ],
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "exclude": [
+    "./node_modules"
+  ]
+}
