--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "devDependencies": {
     "@types/ini": "^1.3.30",
     "@types/node": "^16.10.3",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "typescript-eslint": "0.0.1-alpha.0"
   },
   "dependencies": {
     "ini": "^2.0.0"
