--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,71 @@
 {
+  "extends": [
+    "airbnb-typescript/base",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": "airbnb-base",
+  "plugins": [
+    "prettier",
+    "@typescript-eslint",
+    "unused-imports"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "project": "./tsconfig.json"
+  },
   "rules": {
-    "quotes": [2, "single"]
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-shadow": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-throw-literal": "off",
+    "@typescript-eslint/lines-between-class-members": "off",
+    //"@typescript-eslint/no-unsafe-return": "off",
+    
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "import/no-cycle": "off",
+    "import/extensions": "off",
+    "import/no-extraneous-dependencies": "off",
+    "unused-imports/no-unused-imports-ts": "warn",
+    "prefer-destructuring": "off",
+    "no-bitwise": "off",
+    "no-void": "off",
+    "no-restricted-syntax": "off",
+    "no-continue": "off",
+    "no-use-before-define": "off",
+    "no-await-in-loop": "off",
+    "prefer-reflect": "off",
+    "new-cap": "off",
+    "no-new": "off",
+    "consistent-return": "off",
+    "no-param-reassign": "off",
+    "no-empty": "off",
+    "no-else-return": "off",
+    "no-plusplus": "off",
+    "no-underscore-dangle": "off",
+    "no-unused-expressions": "off",
+    "no-unused-vars": "off",
+    "no-console": "off",
+    "func-names": "off",
+    "no-process-exit": "off",
+    "object-shorthand": "off",
+    "class-methods-use-this": "off"
   }
 }
