--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "semi": false,
-  "trailingComma": "none",
+  "useTabs": false,
+  "printWidth": 80,
+  "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 80
+  "trailingComma": "none",
+  "semi": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
