--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,18 @@
     "strict": true,
     "rootDir": ".",
     "typeRoots": [
-      "./types",
+      "./typings",
       "node_modules/@types"
     ],
+    "paths": {
+      "@typings/*": ["./typings/*"]
+    },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": false
   },
   "exclude": [
     "./node_modules"
