Test server properties from ini

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-throw-literal": "off",
@@ -38,6 +38,8 @@
       "error",
       {
         "endOfLine": "auto"
+      }, {
+        "usePrettierrc": true
       }
     ],
     "import/no-cycle": "off",
