Add additional config parameters

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
-map=Helodeck
-gamemode=DM
+name="My Server"
 playlist=DM
-bots=0
-timeLimit=10
-autoRestart=false
+maxPlayers=16
+bots=4
 startingCP=0
+timeLimit=10
+map=""
+gamemode=""
+autoRestart=false
+port=7777
