--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-throw-literal": "off",
     "@typescript-eslint/lines-between-class-members": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     //"@typescript-eslint/no-unsafe-return": "off",
     
     "prettier/prettier": [
